fix: prevent horizontal scroll caused by initial layout shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,13 +4,16 @@
   themes: cupcake --default, forest --prefersdark;
 }
 
-html,
-body {
+html {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   scroll-behavior: smooth;
+}
+
+html,
+body {
   overflow-x: hidden;
 }
 
